--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -6,6 +6,8 @@ jobs:
   run-action:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
       - name: List folders
         run: |
           pwd
