--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -11,7 +11,11 @@ jobs:
       - name: List folders
         run: |
           pwd
-          ls
+          ls -a
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token }}"
       - name: step-1
         id: greetingStep
         uses: actions/hello-world-javascript-action@v1
