--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -1,9 +1,12 @@
 name: Simple Action
 
 on:
-  pull_request:
-  schedule:
-    - cron: "0/5 * * * *"
+  repository_dispatch:
+    types:
+      - build
+  # schedule:
+  #   - cron: "0/5 * * * *"
+  # pull_request:
 
 jobs:
   run-action:
