--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -12,6 +12,8 @@ jobs:
   run-action:
     runs-on: ubuntu-latest
     steps:
+      - name: payload
+        run: echo ${{github.event.client_payload.env}}
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: List folders
