--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -1,9 +1,10 @@
 name: Simple Action
 
 on:
-  repository_dispatch:
-    types:
-      - build
+  push:
+    branches:
+      - main
+
   # schedule:
   #   - cron: "0/5 * * * *"
   # pull_request:
