--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -16,7 +16,7 @@ jobs:
         env:
           STEP_ENV: STEP environment variable
         run: |
-          echo "WF_ENV: ${GLOBAL_ENV}}"
+          echo "WF_ENV: ${GLOBAL_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
       
