--- a/.github/workflows/githubToken.yaml
+++ b/.github/workflows/githubToken.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: make request
         run: |
           curl --request POST \
-          --url https://api.github.com/repos/${{ github.repository }} \
+          --url https://api.github.com/repos/${{ github.repository }}/issues \
           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --header 'content-type: application/json' \
           --data '{
