--- a/.github/workflows/createFile.yaml
+++ b/.github/workflows/createFile.yaml
@@ -7,11 +7,11 @@ jobs:
   create-file-and-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      # - name: Checkout
+      #   uses: actions/checkout@v3
       - name: Create File with random number
         run: |
           pwd
           ls -a
-          git clone git@github.com:${{github.repository}}.git
+          git clone https://github.com/${{github.repository}}.git
           ls -a
