--- a/.github/workflows/createFile.yaml
+++ b/.github/workflows/createFile.yaml
@@ -18,8 +18,8 @@ jobs:
           git config --global user.email "testEmail@test.com"
           git config --global user.name "testName"
           git fetch
-          git checkout master
-          git branch --set-upstream-to=origin/master
+          git checkout main
+          git branch --set-upstream-to=origin/main
           git pull
           ls -a
           echo $RANDOM >> random.txt
