--- a/.github/workflows/createFile.yaml
+++ b/.github/workflows/createFile.yaml
@@ -23,6 +23,6 @@ jobs:
           git pull
           ls -a
           echo $RANDOM >> random.txt
-          git add -a
+          git add -A
           git commit -m "create a new file"
           git push
