add if for step

--- a/.github/workflows/contexts.yaml
+++ b/.github/workflows/contexts.yaml
@@ -21,6 +21,7 @@ jobs:
         run: |
           echo $CONTEXT
       - name: Secrets context
+        if: failure()
         env:
           CONTEXT: ${{ toJson(secrets) }}
         run: |
