add error in step

--- a/.github/workflows/contexts.yaml
+++ b/.github/workflows/contexts.yaml
@@ -19,7 +19,7 @@ jobs:
         env:
           CONTEXT: ${{ toJson(github) }}
         run: |
-          echo $CONTEXT
+          eccho $CONTEXT
       - name: Secrets context
         if: failure()
         env:
