add strategy for workflow

--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -5,13 +5,17 @@ on:
 
 jobs:
   node-version:
-    runs-on:  ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        node-version: [6, 8, 10]
+    runs-on:  ${{ matrix.os }}
     steps:
       - name: Log version
         run: node -v
       - name: Change node v
         uses: actions/setup-node@v3
         with:
-          node-version: 6
+          node-version: ${{ matrix.node-version }}
       - name: Log version
         run: node -v
