--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -6,10 +6,23 @@ on:
 jobs:
   run_in_docker_container:
     runs-on: ubuntu-latest
-    container:
-      image: node:13.5.0-alpine3.10
+    services:
+      app:
+        image: alialaa17/node-api
+        ports:
+          - 3001:3000
+      mongo:
+        image: mongo
+        ports:
+          - 27017:27017
     steps:
-      - name: Log node version
+      - name: POST a user
         run: |
-          node -v
-          cat /etc/os-release
+          curl -X POST http://localhost:3001/api/user \
+          -H 'Content-Type: aplication/json' \
+          -d {"username": "hello", "address": "dwded"}
+      - name: POST a user
+        run: |
+          curl -X GET http://localhost:3001/api/users \
+          -H 'Content-Type: aplication/json'
+          
