--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -20,7 +20,7 @@ jobs:
         run: |
           curl -X POST http://localhost:3001/api/user \
           -H 'Content-Type: aplication/json' \
-          -d {"username": "hello", "address": "dwded"}
+          -d '{"username": "hello", "address": "dwded"}'
       - name: POST a user
         run: |
           curl -X GET http://localhost:3001/api/users \
