--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -18,11 +18,12 @@ jobs:
     steps:
       - name: POST a user
         run: |
-          curl -X POST http://localhost:3001/api/user \
-          -H 'Content-Type: aplication/json' \
-          -d '{"username": "hello", "address": "dwded"}'
-      - name: POST a user
+          curl --request POST \
+          --url http://localhost:3001/api/user \
+          --header 'Content-Type: aplication/json' \
+          --data '{"username": "hefsllo", "address": "dwgsded"}'
+      - name: GET a users
         run: |
-          curl -X GET http://localhost:3001/api/users \
-          -H 'Content-Type: aplication/json'
+          curl --request GET \
+          --url http://localhost:3001/api/users
           
