--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -20,8 +20,8 @@ jobs:
         run: |
           curl --request POST \
           --url http://localhost:3001/api/user \
-          --header 'Content-Type: aplication/json' \
-          --data '{"username": "hefsllo", "address": "dwgsded"}'
+          --header ''Content-Type: aplication/json'' \
+          --data '''{"username": "hefsllo", "address": "dwgsded"}'''
       - name: GET a users
         run: |
           curl --request GET \
