add slack message notifier

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -17,4 +17,10 @@ jobs:
         with:
           entrypoint: "/usr/local/bin/node"
           args: '-v'
+      - name: Send message to slack
+        uses: docker://technosophos/slack-notify
+        env:
+          SLACK_WEBHOOK: https://hooks.slack.com/services/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
+          SLACK_MESSAGE: Test message from commit ${{ github.sha }}
+
           
