--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm install
+      - name: Run Format check
+        run: npm format:check
       - name: Run Tests
         run: npm test
       - name: Build
