--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run Format check
-        run: npm format:check
+        run: npm run format:check
       - name: Run Tests
         run: npm test
       - name: Build
