--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,21 +14,40 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Get Cahce path
+        id: cache-path
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.cache-path.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hasFiles('**/package-lock.json') }}
+          restore-key: |
+            ${{ runner.os }}-node-
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: latest
+
       - name: Install dependencies
         run: npm ci
+
       - name: Run Format check
         run: npm run format:check
+
       - name: Run Tests
         run: npm test -- --coverage
         env:
           CI: true
+
       - name: Build Project
         if: github.event_name == 'push'
         run: npm run build
+
       - name: Deploy on Staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain actions-staging.surge.sh
