--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.cache-path.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hasFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-key: |
             ${{ runner.os }}-node-
 
