--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,6 +55,7 @@ jobs:
         run: npm run build
 
       - name: Upload Build Artifacts
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
