--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
     branches:
       - development
 
+env:
+  IS_PUSH: ${{ github.event_name == 'push' }}
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -51,11 +54,11 @@ jobs:
           path: coverage
 
       - name: Build Project
-        if: github.event_name == 'push'
+        if: $IS_PUSH
         run: npm run build
 
       - name: Upload Build Artifacts
-        if: github.event_name == 'push'
+        if: $IS_PUSH
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
@@ -65,7 +68,7 @@ jobs:
         uses: actions/download-artifact@v3
 
       - name: Deploy on Staging
-        if: github.event_name == 'push'
+        if: $IS_PUSH
         run: npx surge --project ./build --domain actions-staging.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
