--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,11 +54,11 @@ jobs:
           path: coverage
 
       - name: Build Project
-        if: ${{ $IS_PUSH }}
+        if: env.IS_PUSH
         run: npm run build
 
       - name: Upload Build Artifacts
-        if: ${{ $IS_PUSH }}
+        if: env.IS_PUSH
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
@@ -68,7 +68,7 @@ jobs:
         uses: actions/download-artifact@v3
 
       - name: Deploy on Staging
-        if: ${{ $IS_PUSH }}
+        if: env.IS_PUSH
         run: npx surge --project ./build --domain actions-staging.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
