--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
         id: cache-path
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
+          echo $IS_PUSH
 
       - name: Cache node_modules
         uses: actions/cache@v3
