--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,9 +8,6 @@ on:
     branches:
       - development
 
-env:
-  IS_PUSH: ${{ github.event_name == 'push' }}
-
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -22,7 +19,6 @@ jobs:
         id: cache-path
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-          echo "${{ toJSON(env.IS_PUSH) }}"
 
       - name: Cache node_modules
         uses: actions/cache@v3
@@ -55,11 +51,11 @@ jobs:
           path: coverage
 
       - name: Build Project
-        if: toJSON(env.IS_PUSH)
+        if: github.event_name == 'push'
         run: npm run build
 
       - name: Upload Build Artifacts
-        if: toJSON(env.IS_PUSH)
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
@@ -69,7 +65,7 @@ jobs:
         uses: actions/download-artifact@v3
 
       - name: Deploy on Staging
-        if: toJSON(env.IS_PUSH)
+        if: github.event_name == 'push'
         run: npx surge --project ./build --domain actions-staging.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
